ressources/css/styles.css
*::before,
*,
*:after {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

img {
    max-width: 100%;
}

a {
    text-decoration: none;
}

:root {
    --orange: #f15c38;
    --blue: #3676fb;
}

html {
    font-size: 10px;
}

@font-face {
    font-family: 'Nunito';
    src: url('../fonts/Nunito/Nunito-VariableFont_wght.ttf')  format('truetype')
}

h1 {
    font-size: 4rem;
}
h2 {
    font-size: 3.5rem;
}
h3 {
    font-size: 3rem;
}
h4 {
    font-size: 2.5rem;
}
h5 {
    font-size: 2rem;
}
h6 {
    font-size: 1.6rem;
}

body {
    min-height: 100vh;
    width: 100vw;
    font-family: 'Nunito', sans-serif;
    font-weight: 400;
    display: flex;
    flex-direction: column;
    background: #dedede;
    overflow-x: hidden;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 1.5em 5em;
    font-size: 1.6rem;
    background: #ffffff;
    box-shadow: 0px 3px 10px 0px #888888;
    margin-bottom: 2.5em;
}

#nav-list {
    list-style: none;
    display: inline-block;
}

#nav-list > li {
    display: inline;
    padding: 0 1em;
}

#nav-list a {
    color: #151515;
}

#nav-list a:hover {
    font-weight: 700;
}

.menu-mobile-icon {
    display: none!important;
}

a#connexion-btn {
    color: var(--orange);
    border: var(--orange) 1px solid;
    padding: .3em .5em;
}

a#inscription-btn {
    color: #ffffff;
    border: var(--orange) 1px solid;
    background: var(--orange);
    padding: .3em .5em;
}

#mobile-nav {
    display: none;
}

main {
    display: flex;
    flex-direction: column;
    padding: 0 4em;
}

.container {
    background: #ffffff;
    padding: 3em 5em;
    border-radius: 1.5em;
    display: flex;
    margin-bottom: 2.5em;
    justify-content: space-between;
    align-items: center;
}

.form-container {
    width: 85%;
}

#voyage-img {
    max-width: 100%;
}

.titre-section {
    margin-bottom: .7em;
    color: var(--blue);
}

#form-recherche {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.form-element {
    width: 100%;
}

#form-recherche label {
    font-size: 1.8rem;
    display: inline-block;
    margin-bottom: .3em;
}

#form-recherche input {
    border: 1px solid #cccccc;
    border-radius: 0;
    height: 3em;
    width: 100%;
    margin-bottom: 1em;
    padding: 0 2em;
    font-size: 1.4rem;
}

#form-recherche input:focus {
    outline: none;
    border: 3px solid var(--orange);
}

#reverse-choice {
    background: var(--orange);
    color: #ffffff;
    width: 3em;
    height: 3em;
    padding: .3em;
    border-radius: 100%;
    margin-bottom: -2.3em;
    margin-top: -.4em;
    cursor: pointer;
    align-self: flex-end;
    transform: rotate(90deg);
}

.btn {
    border: none;
    cursor: pointer;
    font-weight: 700;
    font-size: 1.6rem;
}

.btn-blue {
    background: var(--blue);
    color: #ffffff;
}

.stat {
    display: flex;
    align-items: center;
}

.stat-icon {
    display: inline-block;
    max-width: 100%;
    width: 7rem;
    fill: var(--orange);
}

.stat-info {
    display: flex;
    flex-direction: column;
    margin-left: 2em;
}

.stat-info h3 {
    color: var(--blue);
}

.stat-info h5 {
    color: #717171;
}


.illustration-container {
    width: 35%;
}

.apps-mobile {
    text-align: center;
}

footer{
    display: flex;
    flex-direction: column;
    padding: 1.5em 5em;
    background: var(--orange);
    color: #ffffff;
    font-size: 1.6rem;
    align-items: center;
}

.sm-icons img{
    width: 2.5em;
    transition: linear 200ms;
}

.sm-icons img:hover{
    background: var(--blue);
    border-radius: 10px;
}

.copyright {
    text-align: center;
}



@media screen and (max-width: 786px) {
    #nav-list > li {
        display: none;
    }
    .menu-mobile-icon {
        display: inline!important;
    }

    header {
        margin-bottom: 1.5em;
        padding: 1.5em 3em;
    }

    main {
        padding: 0 2em;
    }

    #mobile-nav.menu-active {
        display: block!important;
        position: absolute;
        top: 0;
        left: 0;
        width: 100%;
        height: 100vh;
        background: var(--blue);
        z-index: 2;
        overflow: hidden;
        padding: 3em 6em;
        list-style: none;
        font-size: 3rem;
        font-weight: 700;
        text-align: center;
    }

    .menu-active li {
        margin-bottom: 2em;
    }

    .menu-active a  {
        color: #ffffff;
    }


    .container {
        padding: 2.5em 3em;
    }

    #recherche, #stats, #apps-mobile {
        flex-direction: column;
    }

    #apps-mobile .illustration-container {
        display: none;
    }

    .stat {
        margin-bottom: 2.5em;
    }
}

